scripts/cpfs/installer_scripts/networkpolicy/bedrock-access-to-apicatalog-controller.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: access-to-apicatalog-controller
  namespace: "csNamespace"
  labels:
    component: cpfs
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: ibm-apicatalog
  ingress:
    - {}
  policyTypes:
    - Ingress
