scripts/cpfs/installer_scripts/networkpolicy/bedrock-access-to-auth-idp.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: access-to-auth-idp
  namespace: "csNamespace"
  labels:
    component: cpfs
spec:
  podSelector:
    matchLabels:
      app: auth-idp
  ingress:
  - {}
  policyTypes:
  - Ingress
