scripts/cpfs/installer_scripts/networkpolicy/bedrock-access-to-auth-mongo.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: access-to-icp-mongodb
  namespace: "csNamespace"
  labels:
    component: cpfs
spec:
  podSelector:
    matchLabels:
      app: icp-mongodb
  ingress:
  - {}
  policyTypes:
    - Ingress
