scripts/cpfs/installer_scripts/networkpolicy/bedrock-access-to-auth-pdp.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: access-to-auth-pdp
  namespace: "csNamespace"
  labels:
    component: cpfs
spec:
  podSelector:
    matchLabels:
      app: auth-pdp
  ingress:
  - {}
  policyTypes:
  - Ingress
