scripts/cpfs/installer_scripts/networkpolicy/bedrock-access-to-cert-manager-webhook.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: access-to-cert-manager-webhook
  namespace: "csNamespace"
  labels:
    component: cpfs
spec:
  podSelector:
    matchLabels:
      app: ibm-cert-manager-webhook
  ingress:
  - {}
