scripts/cpfs/installer_scripts/networkpolicy/bedrock-access-to-common-audit-logging.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: access-to-common-audit-logging
  namespace: "csNamespace"
  labels:
    component: cpfs
spec:
  podSelector:
    matchLabels:
      app: fluentd
  policyTypes:
  - Ingress
  ingress:
  - {}
