scripts/cpfs/installer_scripts/networkpolicy/bedrock-access-to-default-http-backend.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: access-to-default-http-backend
  namespace: "csNamespace"
  labels:
    component: cpfs
spec:
  podSelector:
    matchLabels:
      app: default-http-backend
  ingress:
    - {}
  policyTypes:
    - Ingress
