scripts/cpfs/installer_scripts/networkpolicy/bedrock-access-to-edb-postgres.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: access-to-edb-postgres
  namespace: "zenNamespace"
  labels:
    component: cpfs
spec:
  podSelector:
    matchExpressions:
      - key: k8s.enterprisedb.io/cluster
        operator: Exists
  ingress:
  - {}
  policyTypes:
    - Ingress
