scripts/cpfs/installer_scripts/networkpolicy/bedrock-access-to-iam-policy-controller.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: access-to-iam-policy-controller
  namespace: "csNamespace"
  labels:
    component: cpfs
spec:
  podSelector:
    matchLabels:
      app: iam-policy-controller
  ingress:
  - {}
  policyTypes:
  - Ingress
