scripts/cpfs/installer_scripts/networkpolicy/bedrock-access-to-ibm-cs-webhook.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: access-to-ibm-cs-webhook
  namespace: "csNamespace"
  labels:
    component: cpfs
spec:
  podSelector:
    matchLabels:
      name: ibm-common-service-webhook
  ingress:
  - {}
