scripts/cpfs/installer_scripts/networkpolicy/bedrock-access-to-license-service-reporter.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: access-to-ibm-licensing-service-reporter
  namespace: "csNamespace"
  labels:
    component: cpfs
spec:
  podSelector:
    matchLabels:
      app: ibm-license-service-reporter-instance
  ingress:
    - {}
  policyTypes:
    - Ingress
