scripts/cpfs/installer_scripts/networkpolicy/bedrock-access-to-management-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: access-to-management-ingress
  namespace: "csNamespace"
  labels:
    component: cpfs
spec:
  podSelector:
    matchLabels:
      component: "management-ingress"
  policyTypes:
  - Ingress
  ingress:
  - {}
