scripts/cpfs/installer_scripts/networkpolicy/bedrock-access-to-monitoring-grafana-service.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: access-to-monitoring-grafana-service
  namespace: "csNamespace"
  labels:
    component: cpfs
spec:
  podSelector:
    matchLabels:
      app: "grafana"
  policyTypes:
  - Ingress
  ingress:
  - {}
