scripts/cpfs/installer_scripts/networkpolicy/bedrock-access-to-mustgather-service.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: access-to-mustgather-service
  namespace: "csNamespace"
  labels:
    component: cpfs
spec:
  podSelector:
    matchLabels:
      app: "must-gather-service"
  policyTypes:
  - Ingress
  ingress:
  - {}
