scripts/cpfs/installer_scripts/networkpolicy/bedrock-access-to-nginx-ingress-controller.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: access-to-nginx-ingress-controller
  namespace: "csNamespace"
  labels:
    component: cpfs
spec:
  podSelector:
    matchLabels:
      component: "nginx-ingress-controller"
  policyTypes:
  - Ingress
  ingress:
  - {}
