scripts/cpfs/installer_scripts/networkpolicy/bedrock-access-to-platform-api.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: access-to-platform-api
  namespace: "csNamespace"
  labels:
    component: cpfs
spec:
  podSelector:
    matchLabels:
      app: platform-api
  ingress:
  - {}
  policyTypes:
  - Ingress
