scripts/cpfs/installer_scripts/networkpolicy/bedrock-access-to-secret-watcher.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: access-to-secret-watcher
  namespace: "csNamespace"
  labels:
    component: cpfs
spec:
  podSelector:
    matchLabels:
      app: secret-watcher
  ingress:
  - {}
  policyTypes:
  - Ingress
