scripts/cpfs/installer_scripts/networkpolicy/bedrock-allow-icpmemcached-access-from-systemhealthcheck.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: access-to-icpmemcached-from-systemhealthcheck
  namespace: "csNamespace"
  labels:
    component: cpfs
spec:
  podSelector:
    matchLabels:
      app: "icp-memcached"
  policyTypes:
  - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: "system-healthcheck-service"
