scripts/cpfs/installer_scripts/networkpolicy/zen-access-to-dsx-influxdb.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: access-to-ibm-dsx-influxdb
  namespace: "zenNamespace"
  labels:
    component: cpfs
spec:
  podSelector:
    matchLabels:
      component: "dsx-influxdb"
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector: {}
