scripts/cpfs/installer_scripts/networkpolicy/zen-access-to-zen-core.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: access-to-zen-core
  namespace: "zenNamespace"
  labels:
    component: cpfs
spec:
  podSelector:
    matchLabels:
      component: "zen-core"
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector: {}
