scripts/cpfs/installer_scripts/networkpolicy/zen-access-to-zen-meta-api.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: access-to-ibm-zen-meta-api
  namespace: "csNamespace"
  labels:
    component: cpfs
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/instance: ibm-zen-meta-api
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector: 
        matchLabels:
          kubernetes.io/metadata.name: "zenNamespace"
    - podSelector: {}
