scripts/cpfs/installer_scripts/networkpolicy/zen-access-to-zen-metastore.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: access-to-zen-metastore
  namespace: "zenNamespace"
  labels:
    component: cpfs
spec:
  podSelector:
    matchLabels:
      component: "zen-metastoredb"
  ingress:
  - from:
    - podSelector: {}
  policyTypes:
  - Ingress
